<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_running_burn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="ss.exercisegps.Activities.RunningBurnActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_gravity="center"
        android:id="@+id/running_burn_gps_status"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="end"
            android:text="@string/latitude"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_margin="4dp"
            android:layout_gravity="center"
            android:id="@+id/running_burn_latitude"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="end"
            android:text="@string/longitude"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_margin="4dp"
            android:layout_gravity="center"
            android:id="@+id/running_burn_longitude"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="end"
                    android:layout_weight="1.3"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="0"
                    android:id="@+id/running_burn_timer_hour"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:layout_weight="1.5"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text=" : "
                    android:id="@+id/textView4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="end"
                    android:layout_weight="1.4"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="0"
                    android:id="@+id/running_burn_timer_minute"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:layout_weight="1.5"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text=" : "
                    android:id="@+id/textView3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="0"
                    android:id="@+id/running_burn_timer_second"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:id="@+id/running_burn_start_stop"
                    android:text="@string/start"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:id="@+id/running_burn_reset"
                    android:text="@string/reset"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2."
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/running_burn_distance" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="0"
                    android:id="@+id/running_burn_item_distance"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:layout_weight="2.5"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="km" />
            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:enabled="false"
                android:id="@+id/running_burn_save"
                android:text="@string/save"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_margin="1dp"
                android:layout_weight=".7"
                android:gravity="center"
                android:text="@string/time_lap" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/distance" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/energy_usage" />

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/running_burn_item_delete"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:text="@string/delete"
            android:layout_weight="4"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:background="@drawable/back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/running_burn_content">

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/time_total"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:background="@drawable/back"
            android:id="@+id/running_burn_total_time" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/distance_total"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:background="@drawable/back"
            android:id="@+id/running_burn_total_distance" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/kilometre"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/energy_usage_total"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:background="@drawable/back"
            android:id="@+id/running_burn_total_energy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/kilo_calorie"/>
    </LinearLayout>
</LinearLayout>
