<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_selected"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ss.exercisegps.Activities.SelectedFoodActivity"
    android:orientation="vertical">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selected_food_add"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/selected_food_add"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/back"
        android:fadeScrollbars="false"
        android:layout_margin="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/selected_food_content">

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="end"
            android:text="@string/energy_food"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:layout_weight="1"
            android:id="@+id/selected_food_result_calorie"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="start"
            android:text="@string/kilo_calorie"/>
    </LinearLayout>

</LinearLayout>
