<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fadeScrollbars="false"
    tools:context="ss.exercisegps.MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menu_location"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_photos"
                    android:contentDescription="@string/menu_location" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="10dp"
                    android:text="@string/menu_location"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menu_bmr"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_communities"
                    android:contentDescription="@string/menu_bmr" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="10dp"
                    android:text="@string/menu_bmr"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="1" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menu_running_burn"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_whats_hot"
                    android:contentDescription="@string/menu_running_burn" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="10dp"
                    android:text="@string/menu_running_burn"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/textView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menu_selected_food_menu"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_home"
                    android:contentDescription="@string/menu_selected_food" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="10dp"
                    android:text="@string/menu_selected_food"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menu_report"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_pages"
                    android:contentDescription="@string/menu_report" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="10dp"
                    android:text="@string/menu_report"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menu_history"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_people"
                    android:contentDescription="@string/menu_history" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="10dp"
                    android:text="@string/menu_history"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="1" />
            </LinearLayout>
        </TableRow>


    </TableLayout>
</ScrollView>
